--- a/year-end.html
+++ b/year-end.html
@@ -5,12 +5,27 @@
   </head>
   <body>
     <main>
+      <div class="header">
+        <h2>2016</h2>
+      </div>
       <div class="article-fullscreen">
       	<div class="article-fullscreen__col-1">
-    	  <h1>Hello</h1>
+          <div class="col">
+        	  <h1 class="item item__1"><span>1</span></h1>
+            <h1 class="item item__2 active"><span>2</span></h1>
+            <h1 class="item item__3"><span>3</span></h1>
+            <h1 class="item item__4"><span>4</span></h1>
+            <h1 class="item item__5"><span>5</span></h1>
+          </div>
         </div>
         <div class="article-fullscreen__col-2">
-    	  <h1>World</h1>
+          <div class="col">
+        	  <h1 class="item item__6"><span>6</span></h1>
+            <h1 class="item item__7"><span>7</span></h1>
+            <h1 class="item item__8"><span>8</span></h1>
+            <h1 class="item item__9"><span>9</span></h1>
+            <h1 class="item item__0"><span>10</span></h1>
+          </div>
         </div>
       </div>
     </main>
