add hover background changes

--- a/year-end.html
+++ b/year-end.html
@@ -6,26 +6,36 @@
   <body>
     <main>
       <div class="header">
-        <h2>2016</h2>
+        <h2></h2>
       </div>
       <div class="article-fullscreen">
+        <div class="title">
+          <h1>The Year In Art</h1>
+          <h1>2016</h1>
+        </div>
       	<div class="article-fullscreen__col-1">
+          <div class="media">
+<!--             <video playsinline autoplay muted loop>
+              <source type="video/mp4">
+            </video> -->
+          </div>
           <div class="col">
-        	  <h1 class="item item__1"><span>1</span></h1>
-            <h1 class="item item__2 active"><span>2</span></h1>
-            <h1 class="item item__3"><span>3</span></h1>
-            <h1 class="item item__4"><span>4</span></h1>
-            <h1 class="item item__5"><span>5</span></h1>
+        	  <h1 class="item item__1"><span>01</span></h1>
+            <h1 class="item item__2"><span>02</span></h1>
+            <h1 class="item item__3"><span>03</span></h1>
+            <h1 class="item item__4"><span>04</span></h1>
+            <h1 class="item item__5"><span>05</span></h1>
           </div>
         </div>
         <div class="article-fullscreen__col-2">
           <div class="col">
-        	  <h1 class="item item__6"><span>6</span></h1>
-            <h1 class="item item__7"><span>7</span></h1>
-            <h1 class="item item__8"><span>8</span></h1>
-            <h1 class="item item__9"><span>9</span></h1>
+        	  <h1 class="item item__6"><span>06</span></h1>
+            <h1 class="item item__7"><span>07</span></h1>
+            <h1 class="item item__8"><span>08</span></h1>
+            <h1 class="item item__9"><span>09</span></h1>
             <h1 class="item item__0"><span>10</span></h1>
           </div>
+          <!-- <video playsinline autoplay muted loop><source type="video/mp4"></video> -->
         </div>
       </div>
     </main>
