cycling with hover

--- a/year-end.html
+++ b/year-end.html
@@ -42,5 +42,6 @@
 
   <script src="node_modules/jquery/dist/jquery.min.js"></script>
   <script src="assets/js/js.js"></script>
+  <script src="assets/vendor/jquery-cycle2.js"></script>
   </body>
 </html>
