--- a/index.html
+++ b/index.html
@@ -12,43 +12,69 @@
         	<img class="logo planet-art" src="assets/images/logos/PlanetArt.svg">
     		</div>
       </div>
-      <div class="article-fullscreen">
-        <div class="title">
-          <h1>The Year In Art</h1>
-          <h1>2016</h1>
-        </div>
-      	<div class="article-fullscreen__col-1">
-      		<div class="media">
-      			<video playsinline autoplay muted loop>
-              <source src="" type="video/mp4">
-            </video>
-      		</div>
-          <div class="col">
-        	  <h1 class="item item__1" data-id="1"><span>01</span></h1>
-            <h1 class="item item__2" data-id="2"><span>02</span></h1>
-            <h1 class="item item__3 vid" data-id="3"><span>03</span></h1>
-            <h1 class="item item__4" data-id="4"><span>04</span></h1>
-            <h1 class="item item__5 vid" data-id="5"><span>05</span></h1>
+      <div class="splash-container">
+          <div class="title"><h1>The Year In Art</h1><h1>2016</h1></div>
+          <div class="cycle-slideshow left"
+               data-cycle-slides="> .slide"
+               data-cycle-loader="wait"
+               data-cycle-pager=".pager__left"
+               data-speed="400"
+               data-cycle-pager-template="<h1><a href=#></a></h1>"
+               >
+            <div class="slide">
+              <img src="./assets/images/one.jpeg">
+            </div>
+            <div class="slide">
+              <img src="./assets/images/two.jpeg">
+            </div>
+            <div class="slide">
+              <video class="video" playsinline muted loop>
+                <source src="./assets/images/three.mp4" type="video/mp4">
+              </video>
+            </div>
+            <div class="slide">
+              <video class="video" playsinline muted loop>
+                <source src="./assets/images/five.mp4" type="video/mp4">
+              </video>
+            </div>
+            <div class="slide">
+              <img src="./assets/images/four.jpeg">
+            </div>
+            <div class="pager pager__left"></div>
           </div>
-        </div>
-        <div class="article-fullscreen__col-2">
-        	<div class="media">
-        		<video playsinline autoplay muted loop>
-              <source src="" type="video/mp4">
-            </video>
-        	</div>
-          <div class="col">
-        	  <h1 class="item item__6" data-id="6"><span>06</span></h1>
-            <h1 class="item item__7" data-id="7"><span>07</span></h1>
-            <h1 class="item item__8" data-id="8"><span>08</span></h1>
-            <h1 class="item item__9" data-id="9"><span>09</span></h1>
-            <h1 class="item item__10" data-id="10"><span>10</span></h1>
+          <div class="cycle-slideshow right"
+               data-cycle-slides="> .slide"
+               data-cycle-loader="wait"
+               data-cycle-pager=".pager__right"
+               data-speed="600"
+               data-cycle-pager-template="<h1><a href=#></a></h1>"
+               >
+            <div class="slide">
+              <img src="./assets/images/one.jpeg">
+            </div>
+            <div class="slide">
+              <img src="./assets/images/two.jpeg">
+            </div>
+            <div class="slide">
+              <video class="video" playsinline muted loop>
+                <source src="./assets/images/three.mp4" type="video/mp4">
+              </video>
+            </div>
+            <div class="slide">
+              <video class="video" playsinline muted loop>
+                <source src="./assets/images/five.mp4" type="video/mp4">
+              </video>
+            </div>
+            <div class="slide">
+              <img src="./assets/images/four.jpeg">
+            </div>
+            <div class="pager pager__right"></div>
           </div>
-        </div>
-      </div>
+       </div>
     </main>
 
   <script src="node_modules/jquery/dist/jquery.min.js"></script>
   <script src="assets/js/js.js"></script>
+  <script src="assets/vendor/jquery-cycle2.js"></script>
   </body>
 </html>
